# MultiChannelMonitor

./: .gitignore  CMakeLists.txt  README.md
qml/: ChannelCard.qml  ControlBar.qml  GlobalStyle.qml  Main.qml  MultiChannelChart.qml  Notification.qml  Style.qml  ThresholdEditor.qml  ThresholdRow.qml
src/: NotificationsModel.cpp  acquisition_engine.cpp  acquisition_engine.h  acquisition_worker.cpp  acquisition_worker.h  acquisitionengine.cpp  acquisitionengine.h  acquisitionworker.cpp  acquisitionworker.h  main.cpp  measurement_channel.cpp  measurement_channel.h  measurementchannel.cpp  measurementchannel.h  notifications_model.cpp  notifications_model.h
tests/: CMakeLists.txt  tst_acquisitionworker.cpp  tst_measurementchannel.cpp  tst_notificationsmodel.cpp
